# openclaw-firecracker

./: .gitignore  README.md  build-rootfs.sh  config.yml  connect-vm.sh  open-dashboard.sh  setup.sh  web-console.sh
console/: index.html  style.css
deploy/: app.py  cdk.json  pyproject.toml  stack.py
deploy/lambda/agentcore_tools/: handler.py
deploy/lambda/api/: handler.py
deploy/lambda/health_check/: handler.py
deploy/userdata/: init-host.sh  launch-vm.sh  stop-vm.sh
docs/: deployment-options.md
